--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký sử dụng Hệ thống nhật ký điện tử Miễn phí 1 năm</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Multi-section Form</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
+        .section {
+            display: none;
         }
 
-        .google-iframe-container {
-            display: flex;
-            justify-content: center;
-            width: 100%;
+        .section.active {
+            display: block;
         }
 
-        .google-iframe {
-            width: 100%;
-            max-width: 640px;
-            height: 1000px; /* Ensure it retains its intended height */
+        .btn-group-vertical .btn {
+            margin-top: 10px;
+        }
+
+        .form-check-label {
+            display: inline-block;
+            margin-right: 10px;
         }
 
         .header-image {
             display: block;
             margin: 0 auto;
             border-radius: 8px;
+            margin-bottom: 2vh;
             transition: width 0.3s ease;
         }
 
@@ -45,19 +45,163 @@
                 width: 50vw;
             }
         }
+
+        .section h2 {
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
-    <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
-    <div class="google-iframe-container">
-        <iframe
-            id="google-iframe"
-            class="google-iframe"
-            src="https://docs.google.com/forms/d/e/1FAIpQLSdrqrWZB8x2DlAuZ-cVRoLe8DgHkXv6f2niGcVsfTbT71RSZA/viewform?embedded=true"
-            frameborder="0" marginheight="0" marginwidth="0">Loading…
-        </iframe>
+    <div class="container mt-5" style="margin-bottom: 10vh;">
+        <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
+        <form id="multi-section-form" method="post"
+            action="https://script.google.com/macros/s/AKfycbx2tQ6Eh3o_0erSGqmIOJR8pR7g9aG2uPJwkCDSWSuVIbBFsVE3oc_vJkhQtw3KYd_s/exec">
+            <div class="section active" id="section1">
+                <h2>Thông tin chủ thể</h2>
+                <div class="mb-3">
+                    <label for="organization" class="form-label">Tên đơn vị</label>
+                    <input type="text" class="form-control" id="organization" name="organization" required>
+                </div>
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Số điện thoại</label>
+                    <input type="text" class="form-control" id="phone" name="phone" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <button type="button" class="btn btn-primary" onclick="validateNext(2)">Next</button>
+            </div>
+            <div class="section" id="section2">
+                <h2>Thông tin sản xuất</h2>
+                <div class="mb-3">
+                    <label class="form-label d-block">Tên chủng loại</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="category" id="plant" value="cây trồng"
+                            required>
+                        <label class="form-check-label" for="plant">Cây trồng</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="category" id="animal" value="vật nuôi"
+                            required>
+                        <label class="form-check-label" for="animal">Vật nuôi</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="category" id="product" value="sản phẩm"
+                            required>
+                        <label class="form-check-label" for="product">Sản phẩm</label>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="quantity" class="form-label">Sản lượng</label>
+                    <select class="form-select" id="quantity" name="quantity" required>
+                        <option value="Kg">Kg</option>
+                        <option value="Tấn">Tấn</option>
+                        <option value="Hộp">Hộp</option>
+                        <option value="Sản phẩm">Sản phẩm</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label d-block">Tiêu chuẩn</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="standard" id="yes" value="Có" required>
+                        <label class="form-check-label" for="yes">Có</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="standard" id="no" value="Không" required>
+                        <label class="form-check-label" for="no">Không</label>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-secondary" onclick="previousSection(1)">Previous</button>
+                <button type="button" class="btn btn-primary" onclick="validateNext(3)">Next</button>
+            </div>
+            <div class="section" id="section3">
+                <h2>Thông tin cần hỗ trợ</h2>
+                <div class="mb-3">
+                    <label class="form-label">Anh chị cần hỗ trợ gì</label><br>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="support1" name="support1"
+                            value="Tiêu chuẩn chất lượng">
+                        <label class="form-check-label" for="support1">Tiêu chuẩn chất lượng</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="support2" name="support2"
+                            value="Quy trình canh tác">
+                        <label class="form-check-label" for="support2">Quy trình canh tác</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="support3" name="support3"
+                            value="Phân phối sản phẩm hàng hoá">
+                        <label class="form-check-label" for="support3">Phân phối sản phẩm hàng hoá</label>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-secondary" onclick="previousSection(2)">Previous</button>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+        </form>
     </div>
+    <script>
+        function nextSection(sectionNumber) {
+            const currentSection = document.querySelector('.section.active');
+            currentSection.classList.remove('active');
+
+            const nextSection = document.querySelector(`#section${sectionNumber}`);
+            nextSection.classList.add('active');
+        }
+
+        function previousSection(sectionNumber) {
+            const currentSection
+                = document.querySelector('.section.active');
+            currentSection.classList.remove('active');
+
+            const previousSection = document.querySelector(`#section${sectionNumber}`);
+            previousSection.classList.add('active');
+        }
+
+        function validateNext(nextSectionNumber) {
+            const currentSection = document.querySelector('.section.active');
+            const inputs = currentSection.querySelectorAll('input, select');
+            let isValid = true;
+
+            inputs.forEach(input => {
+                if (input.checkValidity() === false) {
+                    isValid = false;
+                    input.reportValidity();
+                }
+            });
+
+            if (isValid) {
+                nextSection(nextSectionNumber);
+            }
+        }
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.getElementById("multi-section-form").addEventListener("submit", function (event) {
+                event.preventDefault();
+                var formData = new FormData(event.target);
+                fetch('https://script.google.com/macros/s/AKfycbx2tQ6Eh3o_0erSGqmIOJR8pR7g9aG2uPJwkCDSWSuVIbBFsVE3oc_vJkhQtw3KYd_s/exec', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            window.location.href = 'https://vncheck.com/';
+                        } else {
+                            console.error('Có lỗi khi gửi dữ liệu');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Lỗi khi gửi dữ liệu:', error);
+                    });
+            });
+        });
+
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
