--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <input type="number" class="form-control" id="quantity" name="quantity" required>
                 </div>
                 <div class="mb-3">
-                    <label for="unit" class="form-label">Sản lượng</label>
+                    <label for="unit" class="form-label">Đơn vị tính</label>
                     <select class="form-select" id="unit" name="unit" required>
                         <option value="Kg">Kg</option>
                         <option value="Tấn">Tấn</option>
