--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
                     </select>
                 </div>
                 <div class="mb-3">
+                    <label for="unit" class="form-label">Thời gian</label>
+                    <select class="form-select" id="time" name="time" required>
+                        <option value="Kg">Tháng</option>
+                        <option value="Tấn">Năm</option>
+                    </select>
+                </div>
+                <div class="mb-3">
                     <label class="form-label d-block">Tiêu chuẩn</label>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="standard" id="yes" value="Có" required>
