--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 <div class="mb-3">
                     <label for="unit" class="form-label">Thời gian</label>
                     <select class="form-select" id="time" name="time" required>
-                        <option value="Kg">Tháng</option>
-                        <option value="Tấn">Năm</option>
+                        <option value="Tháng">Tháng</option>
+                        <option value="Năm">Năm</option>
                     </select>
                 </div>
                 <div class="mb-3">
