--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                 <div class="mb-3">
                     <label for="unit" class="form-label">Thời gian</label>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="time" id="plant" value="Tháng"
+                        <input class="form-check-input" type="radio" name="time" id="month" value="Tháng"
                             required>
                         <label class="form-check-label" for="plant">Tháng</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="time" id="animal" value="Năm"
+                        <input class="form-check-input" type="radio" name="time" id="year" value="Năm"
                             required>
                         <label class="form-check-label" for="animal">Năm</label>
                     </div>
