--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="unit" class="form-label">Thời gian</label>
+                    <label class="form-label d-block">Thời gian</label>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="time" id="month" value="Tháng"
                             required>
