--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
+        body {
+            background: linear-gradient(to bottom, #DFFFD7,  #90EE90);
+
+            height: 100vh;
+            /* Đảm bảo nền bao phủ toàn bộ chiều cao trang */
+            margin: 0;
+            /* Loại bỏ margin mặc định */
+        }
+
+
         .section {
             display: none;
         }
@@ -57,20 +67,28 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Màu sắc và độ mờ của lớp phủ */
+            background-color: rgba(0, 0, 0, 0.5);
+            /* Màu sắc và độ mờ của lớp phủ */
             display: none;
             justify-content: center;
             align-items: center;
-            z-index: 9999; /* Đảm bảo lớp phủ nằm trên mọi nội dung khác */
+            z-index: 9999;
+            /* Đảm bảo lớp phủ nằm trên mọi nội dung khác */
         }
 
         .spinner {
-            border: 6px solid #f3f3f3; /* Màu của vòng tròn */
-            border-top: 6px solid #3498db; /* Màu của phần trên cùng của vòng tròn */
-            border-radius: 50%; /* Hình dạng của vòng tròn */
-            width: 50px; /* Đường kính của vòng tròn */
-            height: 50px; /* Đường kính của vòng tròn */
-            animation: spin 1s linear infinite; /* Hiệu ứng quay vòng */
+            border: 6px solid #f3f3f3;
+            /* Màu của vòng tròn */
+            border-top: 6px solid #3498db;
+            /* Màu của phần trên cùng của vòng tròn */
+            border-radius: 50%;
+            /* Hình dạng của vòng tròn */
+            width: 50px;
+            /* Đường kính của vòng tròn */
+            height: 50px;
+            /* Đường kính của vòng tròn */
+            animation: spin 1s linear infinite;
+            /* Hiệu ứng quay vòng */
         }
 
         @keyframes spin {
