--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             height: 100vh;
             /* Đảm bảo nền bao phủ toàn bộ chiều cao trang */
             margin: 0;
+            background-repeat: no-repeat;
             /* Loại bỏ margin mặc định */
         }
 
