--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         body {
             background: linear-gradient(to bottom, #DFFFD7,  #90EE90);
 
-            height: 100vh;
+            height: auto;
+
             /* Đảm bảo nền bao phủ toàn bộ chiều cao trang */
             margin: 0;
             background-repeat: no-repeat;
@@ -109,6 +110,8 @@
         <div class="spinner"></div>
     </div>
     <div class="container mt-5" style="margin-bottom: 10vh;">
+        <br>
+        <br>
         <img class="header-image" src="km_nkdt.jpg" alt="Header Image">
         <form id="multi-section-form" method="post"
             action="https://script.google.com/macros/s/AKfycbx2tQ6Eh3o_0erSGqmIOJR8pR7g9aG2uPJwkCDSWSuVIbBFsVE3oc_vJkhQtw3KYd_s/exec">
